ory-selfservice-rust/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-selfservice-rust
  labels:
    app: ory-selfservice-rust
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: ory-selfservice-rust
