ory-selfservice-rust/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ory-selfservice-rust
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.login.outi.ir
      secretName: ory-selfservice-rust-tls
  rules:
    - host: web.login.outi.ir
      http:
        paths:
          - path: /self-service
            pathType: Prefix
            backend:
              service:
                name: kratos-public
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ory-selfservice-rust
                port:
                  name: http
